--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,7 +29,7 @@
     },
     "typeRoots": [
       "node_modules/@types",
-      "src/index.ts"
+      "src/index.d.ts"
     ]
   },
   "include": [
