--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,7 @@
 {
-    "semi": false,
     "tabWidth": 4,
+	"useTabs": true,
     "printWidth": 100,
-    "singleQuote": true,
     "trailingComma": "all",
     "bracketSpacing": true
 }
