--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
       "import": "./dist/adapt-it-library.es.js",
       "require": "./dist/adapt-it-library.umd.js"
     },
-    "./dist/style.css": "./dist/style.css"
+    "./dist/style.css": "./dist/style.css",
+	"./dist/index.d.ts": "./dist/index.d.ts"
   },
   "main": "./dist/adapt-it-library.umd.js",
   "module": "./dist/adapt-it-library.es.js",
