Fix react version warning

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,6 +21,11 @@
         "@typescript-eslint",
         "simple-import-sort"
     ],
+	"settings": {
+		"react": {
+			"version": "detect"
+		}
+	},
     "rules": {
         "@typescript-eslint/no-unused-vars": "error",
         "@typescript-eslint/no-explicit-any": "error",
